//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package javaclasses.exlibris.c;

import "spine/options.proto";

option (type_url_prefix) = "type.javaclasses.exlibris";
option java_package = "javaclasses.exlibris.c";
option java_outer_classname = "EnrichmentsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "javaclasses/exlibris/values.proto";
import "javaclasses/exlibris/model.proto";


message BookEnrichment {
    option (enrichment_for) = "javaclasses.exlibris.c.BookBorrowed,"
                                "javaclasses.exlibris.c.ReservationAdded,"
                                "javaclasses.exlibris.c.BookLost,"
                                "javaclasses.exlibris.c.InventoryAppended,"
                                "javaclasses.exlibris.c.BookReturned,"
                                "javaclasses.exlibris.c.ReservationCanceled,"
                                "javaclasses.exlibris.c.ReservationPickUpPeriodExpired,"
                                "javaclasses.exlibris.c.ReservationBecameLoan,"
                                "javaclasses.exlibris.c.LoanBecameOverdue,"
                                "javaclasses.exlibris.c.LoanBecameShouldReturnSoon,"
                                "javaclasses.exlibris.c.LoanPeriodExtended";
    //                                "javaclasses.exlibris.c.BookReturned"
    //                                "javaclasses.exlibris.c.ReservationCanceled"
    //                                "javaclasses.exlibris.c.ReservationPickUpPeriodExpired"
    //                                "javaclasses.exlibris.c.ReservationBecameLoan"
    //                                "javaclasses.exlibris.c.LoanBecameOverdue"
    //                                "javaclasses.exlibris.c.LoanBecameShouldReturnSoon"
    //                                "javaclasses.exlibris.c.LoanPeriodExtended"
    //                                "javaclasses.exlibris.c.BookLost";

    Book book = 1 [(by) = "inventory_id"];
}
